feat: support Java 11/17/21 runtimes for the CLI
The CLI claimed "works on Java 11+" but actually required Java 21 to
run because the build was emitting Java 21 bytecode and the source
used Java 14+ syntax (records, switch expressions, list .getFirst,
instanceof patterns, text blocks). Users on Java 11 or Java 17 hit
UnsupportedClassVersionError on first invocation despite install.sh
silently letting them through.

This change makes the claim true: argus-core and argus-cli now compile
to Java 11 bytecode, the agent/server/micrometer/starter modules
target Java 17 (Spring Boot 3 baseline), and one CLI command
(argus slowlog, which uses jdk.jfr.consumer.RecordingStream) gates on
Runtime.version().feature() < 14 with a clear error.

Source changes:
  - Records → final classes preserving accessor names (e.g. record
    Foo(int x, String y) → final class Foo with int x() / String y()
    methods + Objects.equals-based equals/hashCode/toString). Touches
    ~30 records across argus-core and argus-cli.
  - Switch expressions / arrow rules → traditional switch with
    case-colon-break / case-colon-return.
  - Stream.toList() (Java 16+) → .collect(Collectors.toList()).
  - List.getFirst()/getLast() (Java 21) → .get(0)/.get(size()-1).
  - instanceof pattern bindings (Java 16+) → instanceof + explicit
    cast.
  - sealed interface in argus-core → plain interface.
  - Text block (Java 15+) in ArgusAgent banner → string concatenation
    with explicit \n.
  - StringBuilder.isEmpty() (Java 15) → length() > 0.
  - SlowlogCommand.streamLocal() rewritten to load
    jdk.jfr.consumer.RecordingStream reflectively and gate on
    Runtime.version().feature() < 14.

Build changes:
  - argus-core, argus-cli: tasks.withType<JavaCompile> {
    options.release.set(11) }
  - argus-agent, argus-server, argus-micrometer,
    argus-spring-boot-starter: options.release.set(17)
  - argus-frontend: java { targetCompatibility = VERSION_17 }
    (no Java sources, but the JVM-version artifact attrib