@@ -16,12 +16,11 @@ class GcLogParserTest {
 
     @Test
     void parseG1UnifiedLog() throws IOException {
-        String log = """
-                [0.234s][info][gc] GC(0) Pause Young (Normal) (G1 Evacuation Pause) 24M->8M(256M) 3.456ms
-                [0.567s][info][gc] GC(1) Pause Young (Normal) (G1 Evacuation Pause) 32M->12M(256M) 5.123ms
-                [1.234s][info][gc] GC(2) Pause Young (Concurrent Start) (G1 Humongous Allocation) 64M->32M(256M) 12.345ms
-                [5.678s][info][gc] GC(3) Concurrent Mark 45.678ms
-                """;
+        String log =
+                "[0.234s][info][gc] GC(0) Pause Young (Normal) (G1 Evacuation Pause) 24M->8M(256M) 3.456ms\n" +
+                "[0.567s][info][gc] GC(1) Pause Young (Normal) (G1 Evacuation Pause) 32M->12M(256M) 5.123ms\n" +
+                "[1.234s][info][gc] GC(2) Pause Young (Concurrent Start) (G1 Humongous Allocation) 64M->32M(256M) 12.345ms\n" +
+                "[5.678s][info][gc] GC(3) Concurrent Mark 45.678ms\n";
         Path file = tempDir.resolve("g1.log");
         Files.writeString(file, log);
 
@@ -29,7 +28,7 @@ class GcLogParserTest {
         assertEquals(4, events.size());
 
         // First event
-        GcEvent first = events.getFirst();
+        GcEvent first = events.get(0);
         assertEquals(0.234, first.timestampSec(), 0.001);
         assertTrue(first.pauseMs() > 3.0 && first.pauseMs() < 4.0);
         assertEquals(24 * 1024, first.heapBeforeKB());
@@ -38,28 +37,27 @@ class GcLogParserTest {
         assertFalse(first.isConcurrent());
 
         // Concurrent event
-        GcEvent concurrent = events.getLast();
+        GcEvent concurrent = events.get(events.size() - 1);
         assertTrue(concurrent.isConcurrent());
     }
 
     @Test
     void parseLegacyFormat() throws IOException {
-        String log = """
-                1.234: [GC (Allocation Failure) [PSYoungGen: 65536K->8192K(76288K)] 65536K->8200K(251392K), 0.0123456 secs]
-                5.678: [Full GC (Ergonomics) [PSYoungGen: 0K->0K(76288K)] 180000K->120000K(251392K), 0.5678901 secs]
-                """;
+        String log =
+                "1.234: [GC (Allocation Failure) [PSYoungGen: 65536K->8192K(76288K)] 65536K->8200K(251392K), 0.0123456 secs]\n" +
+                "5.678: [Full GC (Ergonomics) [PSYoungGen: 0K->0K(76288K)] 180000K->120000K(251392K), 0.5678901 secs]\n";
         Path file = tempDir.resolve("legacy.log");
         Files.writeString(file, log);
 
         List<GcEvent> events = GcLogParser.parse(file);
         assertEquals(2, events.size());
 
-        GcEvent young = events.getFirst();
+        GcEvent young = events.get(0);
         assertEquals("Young", young.type());
         assertEquals("Allocation Failure", young.cause());
         assertFalse(young.isFullGc());
 
-        GcEvent full = events.getLast();
+        GcEvent full = events.get(events.size() - 1);
         assertTrue(full.isFullGc());
         assertTrue(full.pauseMs() > 500);
     }
@@ -69,18 +67,17 @@ class GcLogParserTest {
         // Two events 5s apart across an ISO baseline. The first event's relative time is 0
         // (it IS the baseline); subsequent events are deltas. This semantics replaces the old
         // seconds-of-day extraction which silently wrapped at midnight.
-        String log = """
-                [2024-01-15T10:30:45.123+0000][info][gc] GC(0) Pause Young (G1 Evacuation Pause) 24M->8M(256M) 3.456ms
-                [2024-01-15T10:30:50.123+0000][info][gc] GC(1) Pause Young (G1 Evacuation Pause) 32M->12M(256M) 5.123ms
-                """;
+        String log =
+                "[2024-01-15T10:30:45.123+0000][info][gc] GC(0) Pause Young (G1 Evacuation Pause) 24M->8M(256M) 3.456ms\n" +
+                "[2024-01-15T10:30:50.123+0000][info][gc] GC(1) Pause Young (G1 Evacuation Pause) 32M->12M(256M) 5.123ms\n";
         Path file = tempDir.resolve("decorated.log");
         Files.writeString(file, log);
 
         List<GcEvent> events = GcLogParser.parse(file);
         assertEquals(2, events.size());
-        assertEquals(0.0, events.getFirst().timestampSec(), 0.001,
+        assertEquals(0.0, events.get(0).timestampSec(), 0.001,
                 "first ISO event sets baseline → relative timestamp is zero");
-        assertEquals(5.0, events.getLast().timestampSec(), 0.5,
+        assertEquals(5.0, events.get(events.size() - 1).timestampSec(), 0.5,
                 "second event is ~5s after the baseline");
     }
 
@@ -88,26 +85,24 @@ class GcLogParserTest {
     void parseShenandoahPause() throws IOException {
         // Real Shenandoah unified logs carry the [gc,shenandoah] tag; without that gate, a
         // bare "Pause Init Mark" line (which G1 also emits in some configs) would misclassify.
-        String log = """
-                [0.500s][info][gc,shenandoah] GC(0) Pause Init Mark 0.123ms
-                [0.600s][info][gc,shenandoah] GC(1) Pause Final Mark 0.456ms
-                """;
+        String log =
+                "[0.500s][info][gc,shenandoah] GC(0) Pause Init Mark 0.123ms\n" +
+                "[0.600s][info][gc,shenandoah] GC(1) Pause Final Mark 0.456ms\n";
         Path file = tempDir.resolve("shenandoah.log");
         Files.writeString(file, log);
 
         List<GcEvent> events = GcLogParser.parse(file);
         assertEquals(2, events.size());
-        assertTrue(events.getFirst().type().contains("Shenandoah"));
-        assertTrue(events.getFirst().pauseMs() < 1.0); // sub-ms precision
+        assertTrue(events.get(0).type().contains("Shenandoah"));
+        assertTrue(events.get(0).pauseMs() < 1.0); // sub-ms precision
     }
 
     @Test
     void parseZgcAllocationStalls() throws IOException {
-        String log = """
-                [1282.654s][info][gc] Allocation Stall (http-worker-347) 508.772ms
-                [1283.100s][info][gc] Allocation Stall (http-worker-348) 123.456ms
-                [1284.200s][info][gc] Allocation Stall (http-worker-347) 200.000ms
-                """;
+        String log =
+                "[1282.654s][info][gc] Allocation Stall (http-worker-347) 508.772ms\n" +
+                "[1283.100s][info][gc] Allocation Stall (http-worker-348) 123.456ms\n" +
+                "[1284.200s][info][gc] Allocation Stall (http-worker-347) 200.000ms\n";
         Path file = tempDir.resolve("zgc-stall.log");
         Files.writeString(file, log);
 
@@ -136,12 +131,11 @@ class GcLogParserTest {
     @Test
     void nonGcLines_ignored() throws IOException {
         // First line must hint unified format for auto-detection
-        String log = """
-                [0.001s][info][os] Application started in 2.345 seconds
-                [0.234s][info][gc] GC(0) Pause Young (Normal) (G1 Evacuation Pause) 24M->8M(256M) 3.456ms
-                [0.300s][info][os] Some random log line
-                [0.400s][info][os] Another non-GC line
-                """;
+        String log =
+                "[0.001s][info][os] Application started in 2.345 seconds\n" +
+                "[0.234s][info][gc] GC(0) Pause Young (Normal) (G1 Evacuation Pause) 24M->8M(256M) 3.456ms\n" +
+                "[0.300s][info][os] Some random log line\n" +
+                "[0.400s][info][os] Another non-GC line\n";
         Path file = tempDir.resolve("mixed.log");
         Files.writeString(file, log);
 
